--- a/css/styles.css
+++ b/css/styles.css
@@ -1,77 +1,261 @@
-* {font-family: 'Montserrat', sans-serif;
+* {
+  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.logo {width: 120px;}
+/* Home  */
+.texto-portada {
+  box-sizing: content-box;
+  width: 100%;
+  background-color: aliceblue;
+  padding: 15px;
+  border: 3px solid rgb(0, 0, 0);
+  height: 50vh;
+}
 
+.primer-skyline {
+  position: absolute;
+  right: 50px;
+  border: 3px solid black;
+}
 
-.bg-color {background:linear-gradient(to bottom left ,crimson 60% , rgb(6, 24, 166)) ;}
+.portada {
+  background-image: url(../fotos/fondogtr.jpg);
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+}
 
-h1
+.portada img {
+  height: 30vh;
+}
 
+/* Pagina R-32  */
+.portada--r32 {
+  background-image: url(../fotos/fondor32.jpg);
+  height: 150vh;
+  background-position: center;
+  background-size: cover;
+}
 
+.texto--r32 {
+  box-sizing: content-box;
+  width: 100%;
+  background-color: aliceblue;
+  padding: 15px;
+  border: 3px solid black;
+  height: 50vh;
+}
 
+.portada--r32 img {
+  border: 3px solid black;
+  height: 40vh;
+}
 
-{ font-size:larger ;float: right;}
+.video--r32 {
+  position: absolute;
+  border: 3px solid black;
+  height: 40vh;
+  size-adjust: 20%;
+  box-sizing: content-box;
+}
+
+/* Pagina R-33  */
+.portada--r33 {
+  background-image: url(../fotos/fondor33.jpg);
+  height: 150vh;
+  background-position: center;
+  background-size: cover;
+}
+
+.portada--r33 p {
+  box-sizing: content-box;
+  width: 100%;
+  background-color: aliceblue;
+  padding: 15px;
+  border: 3px solid black;
+  height: 50vh;
+}
+
+.portada--r33 img {
+  position: absolute;
+  right: 50px;
+  border: 3px solid black;
+  height: 40vh;
+}
+
+/* Pagina R-34  */
+.portada--r34 {
+  background-image: url(../fotos/fondor34.jpg);
+  height: 150vh;
+  background-position: center;
+  background-size: cover;
+}
+
+.portada--r34 p {
+  box-sizing: content-box;
+  width: 50%;
+  background-color: aliceblue;
+  padding: 15px;
+  border: 3px solid black;
+  height: 50vh;
+  width: 100%;
+}
+
+.portada--r34 img {
+  position: absolute;
+  right: 50px;
+  border: 3px solid black;
+  height: 36vh;
+}
+
+/* Pagina R-35  */
+.portada--r35 {
+  background-image: url(../fotos/fondor35.jpg);
+  height: 150vh;
+  background-position: center;
+  background-size: cover;
+}
+
+.portada--r35 article {
+  box-sizing: content-box;
+  width: 50%;
+  background-color: aliceblue;
+  padding: 15px;
+  border: 3px solid black;
+}
+
+.portada--r35 img {
+  position: absolute;
+  right: 50px;
+  border: 3px solid black;
+  height: 40vh;
+}
+
+/* Pagina R-36  */
+.portada--r36 {
+  background-image: url(../fotos/fondor36.jpg);
+  height: 150vh;
+  background-position: center;
+  background-size: cover;
+}
+
+.portada--r36 article {
+  box-sizing: content-box;
+  width: 50%;
+  background-color: aliceblue;
+  padding: 15px;
+  border: 3px solid black;
+}
+
+.portada--r36 img {
+  position: absolute;
+  right: 50px;
+  border: 3px solid black;
+  height: 40vh;
+}
+
+.logo {
+  width: 120px;
+}
+
+.bg-color {
+  background: linear-gradient(to bottom left, crimson 60%, rgb(6, 24, 166));
+}
+
+h1 {
+  font-size: larger;
+  float: right;
+}
 
 ul {
   list-style-type: none;
 }
 
-
-
-.texto-portada {box-sizing: content-box ; width:100% ; background-color: aliceblue; padding:15px; border:3px solid rgb(0, 0, 0) ; height: 50vh; }
-
-
-
-
-.portada {background-image:url(../fotos/fondogtr.jpg); height: 100vh; background-position: center; background-size: cover;  }
-.portada img {height: 30vh;}
-h2 {text-align: center;box-sizing: content-box;width: 35%; background:linear-gradient( crimson 60%, rgb(6, 24, 166) ) ;padding: 15px;border: 3px solid black;}
-
-
-.primer-skyline {position:absolute; right: 50px;border: 3px solid black; }
-
-
-.portada--r32  {background-image:url(../fotos/fondor32.jpg); height:150vh; background-position: center; background-size: cover; }
-.texto--r32  {box-sizing: content-box; width: 100%; background-color: aliceblue; padding: 15px; border: 3px solid black; height: 50vh; }
-.portada--r32 img {border: 3px solid black; height: 40vh;}
-.video--r32 {position:absolute; border: 3px solid black;height: 40vh; size-adjust: 20% ;box-sizing: content-box; }
-.zoom { overflow: hidden;  }
-.zoom :hover   {  transform: scale(1.2); transition-duration: 1s; }
-.portada--r33  {background-image:url(../fotos/fondor33.jpg); height: 150vh; background-position: center; background-size: cover; }
-.portada--r33 p {box-sizing: content-box; width: 100%; background-color: aliceblue; padding: 15px; border: 3px solid black;height: 50vh; }
-.portada--r33 img {position:absolute; right: 50px; border: 3px solid black; height: 40vh; }
-
-.portada--r34  {background-image:url(../fotos/fondor34.jpg); height:150vh; background-position: center; background-size: cover; }
-.portada--r34 p {box-sizing: content-box; width: 50%; background-color: aliceblue; padding: 15px ;border: 3px solid black; height:50vh ; width: 100%; }
-.portada--r34 img {position: absolute; right: 50px; border: 3px solid black; height:36vh}
-
-.portada--r35  {background-image:url(../fotos/fondor35.jpg); height:150vh; background-position: center; background-size: cover; }
-.portada--r35 article {box-sizing: content-box; width: 50%; background-color: aliceblue; padding: 15px ;border: 3px solid black; }
-.portada--r35 img {position: absolute;right: 50px; border: 3px solid black; height:40vh}
-
-.portada--r36  {background-image:url(../fotos/fondor36.jpg); height:150vh; background-position: center; background-size: cover; }
-.portada--r36 article {box-sizing: content-box; width: 50%; background-color: aliceblue; padding: 15px ;border: 3px solid black; }
-.portada--r36 img {position: absolute;right: 50px; border: 3px solid black; height:40vh}
-
-.pie {background:linear-gradient(to top left, crimson 60%, rgb(6, 24, 166)); padding: 50px; justify-content: space-between; }
-
-@media screen and (max-width:800px) {
- .texto-portada {height:40vh ;width: 90%;}
-.portada img {left: 50px;position: static; height: 20vh;}
-.portada--r32 img {left: 50px;position: static; height: 20vh;}
-.portada--r32 {height: 180vh;}
-.texto--r32-2 {height: 40vh;}
-.portada--r32 p {height: 40vh; width: 90%;}
-.video--r32 {left: auto;}
-.portada--r33 img {left: 50px;position: static; height: 25vh;}
-.portada--r33 p {height: 40vh;width: 90%;}
-.portada--r34 img {left: 50px;position: static; height: 25vh;}
-.portada--r34 p {height: 40vh;width: 90%;}
-.portada--r35 img {left: 50px;position: static; height: 25vh;}
-.portada--r36 img {left: 50px;position: static; height: 17vh;}
+/* Animaciones  */
+.zoom {
+  overflow: hidden;
 }
 
+.zoom :hover {
+  transform: scale(1.2);
+  transition-duration: 1s;
+}
+
+h2 {
+  text-align: center;
+  box-sizing: content-box;
+  width: 35%;
+  background: linear-gradient(crimson 60%, rgb(6, 24, 166));
+  padding: 15px;
+  border: 3px solid black;
+}
+
+.pie {
+  background: linear-gradient(to top left, crimson 60%, rgb(6, 24, 166));
+  padding: 50px;
+  justify-content: space-between;
+}
+
+/* Version mobile  */
+@media screen and (max-width: 800px) {
+  .texto-portada {
+    height: 40vh;
+    width: 90%;
+  }
+  .portada img {
+    left: 50px;
+    position: static;
+    height: 20vh;
+  }
+  .portada--r32 img {
+    left: 50px;
+    position: static;
+    height: 20vh;
+  }
+  .portada--r32 {
+    height: 180vh;
+  }
+  .texto--r32-2 {
+    height: 40vh;
+  }
+  .portada--r32 p {
+    height: 40vh;
+    width: 90%;
+  }
+  .video--r32 {
+    left: auto;
+  }
+  .portada--r33 img {
+    left: 50px;
+    position: static;
+    height: 25vh;
+  }
+  .portada--r33 p {
+    height: 40vh;
+    width: 90%;
+  }
+  .portada--r34 img {
+    left: 50px;
+    position: static;
+    height: 25vh;
+  }
+  .portada--r34 p {
+    height: 40vh;
+    width: 90%;
+  }
+  .portada--r35 img {
+    left: 50px;
+    position: static;
+    height: 25vh;
+  }
+  .portada--r36 img {
+    left: 50px;
+    position: static;
+    height: 17vh;
+  }
+}
+
+/*# sourceMappingURL=styles.css.map */
