--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 }
 
 .portada {
-  background-image: url(../fotos/fondogtr.jpg);
+  background-image: url(../../fotos/fondogtr.jpg);
   height: 100vh;
   background-position: center;
   background-size: cover;
@@ -34,7 +34,7 @@
 
 /* Pagina R-32  */
 .portada--r32 {
-  background-image: url(../fotos/fondor32.jpg);
+  background-image: url(../../fotos/fondor32.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -64,7 +64,7 @@
 
 /* Pagina R-33  */
 .portada--r33 {
-  background-image: url(../fotos/fondor33.jpg);
+  background-image: url(../../fotos/fondor33.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -88,7 +88,7 @@
 
 /* Pagina R-34  */
 .portada--r34 {
-  background-image: url(../fotos/fondor34.jpg);
+  background-image: url(../../fotos/fondor34.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -113,7 +113,7 @@
 
 /* Pagina R-35  */
 .portada--r35 {
-  background-image: url(../fotos/fondor35.jpg);
+  background-image: url(../../fotos/fondor35.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -121,7 +121,8 @@
 
 .portada--r35 article {
   box-sizing: content-box;
-  width: 50%;
+  width: 100%;
+  height: 100%;
   background-color: aliceblue;
   padding: 15px;
   border: 3px solid black;
@@ -136,7 +137,7 @@
 
 /* Pagina R-36  */
 .portada--r36 {
-  background-image: url(../fotos/fondor36.jpg);
+  background-image: url(../../fotos/fondor36.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -157,6 +158,7 @@
   height: 40vh;
 }
 
+/* Header  */
 .logo {
   width: 120px;
 }
@@ -184,6 +186,24 @@ ul {
   transition-duration: 1s;
 }
 
+.fondo-contacto {
+  background-image: url(../../fotos/fondo-contacto.jpg);
+  height: 90vh;
+  background-position: center;
+  background-size: cover;
+}
+
+textarea {
+  min-height: 100px;
+  max-height: 250px;
+}
+
+.fondomodal {
+  background-image: url(../../fotos/gtr-r34.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 h2 {
   text-align: center;
   box-sizing: content-box;
@@ -197,10 +217,74 @@ h2 {
   background: linear-gradient(to top left, crimson 60%, rgb(6, 24, 166));
   padding: 50px;
   justify-content: space-between;
+  text-align: center;
 }
 
 /* Version mobile  */
 @media screen and (max-width: 800px) {
+  .texto-portada {
+    height: 40vh;
+    width: 90%;
+  }
+  .portada img {
+    left: 50px;
+    position: static;
+    height: 20vh;
+  }
+  .portada--r32 img {
+    left: 50px;
+    position: static;
+    height: 20vh;
+  }
+  .portada--r32 {
+    height: 180vh;
+  }
+  .texto--r32-2 {
+    height: 40vh;
+  }
+  .portada--r32 p {
+    height: 40vh;
+    width: 90%;
+  }
+  .video--r32 {
+    left: auto;
+  }
+  .portada--r33 img {
+    left: 50px;
+    position: static;
+    height: 25vh;
+  }
+  .portada--r33 p {
+    height: 40vh;
+    width: 90%;
+  }
+  .portada--r34 img {
+    left: 50px;
+    position: static;
+    height: 25vh;
+  }
+  .portada--r34 p {
+    height: 40vh;
+    width: 90%;
+  }
+  .portada--r35 img {
+    left: 50px;
+    position: static;
+    height: 25vh;
+  }
+  .portada--r36 img {
+    left: 50px;
+    position: static;
+    height: 17vh;
+  }
+  .fondo-contacto form {
+    height: auto;
+  }
+  .fondomodal {
+    background-image: url(../fotos/nissan-r34.gif);
+  }
+}
+@media screen and (max-width: 500px) {
   .texto-portada {
     height: 40vh;
     width: 90%;
