--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,18 +12,19 @@
   @import "pages/R36";
   @import "layout/header";
   @import "components/animations";
- 
+  @import "pages/contacto";
   
   
   
    
   
  
+  
   h2 {text-align: center;box-sizing: content-box;width: 35%; background:linear-gradient( crimson 60%, rgb(6, 24, 166) ) ;padding: 15px;border: 3px solid black;}
   
 
   
-  .pie {background:linear-gradient(to top left, crimson 60%, rgb(6, 24, 166)); padding: 50px; justify-content: space-between; }
+  .pie {background:linear-gradient(to top left, crimson 60%, rgb(6, 24, 166)); padding: 50px; justify-content: space-between; text-align: center; }
   
   /* Version mobile  */
  
@@ -41,4 +42,22 @@
   .portada--r34 p {height: 40vh;width: 90%;}
   .portada--r35 img {left: 50px;position: static; height: 25vh;}
   .portada--r36 img {left: 50px;position: static; height: 17vh;}
+  .fondo-contacto form {height: auto;}
+  .fondomodal {background-image: url(../fotos/nissan-r34.gif);}
   }
+
+  @media screen and (max-width:500px) {
+    .texto-portada {height:40vh ;width: 90%;}
+   .portada img {left: 50px;position: static; height: 20vh;}
+   .portada--r32 img {left: 50px;position: static; height: 20vh;}
+   .portada--r32 {height: 180vh;}
+   .texto--r32-2 {height: 40vh;}
+   .portada--r32 p {height: 40vh; width: 90%;}
+   .video--r32 {left: auto;}
+   .portada--r33 img {left: 50px;position: static; height: 25vh;}
+   .portada--r33 p {height: 40vh;width: 90%;}
+   .portada--r34 img {left: 50px;position: static; height: 25vh;}
+   .portada--r34 p {height: 40vh;width: 90%;}
+   .portada--r35 img {left: 50px;position: static; height: 25vh;}
+   .portada--r36 img {left: 50px;position: static; height: 17vh;}
+   }
