--- a/scss/pages/_R34.scss
+++ b/scss/pages/_R34.scss
@@ -1,4 +1,4 @@
  /* Pagina R-34  */
- .portada--r34  {background-image:url(../fotos/fondor34.jpg); height:150vh; background-position: center; background-size: cover; }
+ .portada--r34  {background-image:url(../../fotos/fondor34.jpg); height:150vh; background-position: center; background-size: cover; }
  .portada--r34 p {box-sizing: content-box; width: 50%; background-color: aliceblue; padding: 15px ;border: 3px solid black; height:50vh ; width: 100%; }
  .portada--r34 img {position: absolute; right: 50px; border: 3px solid black; height:36vh}
