--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,3 +1,3 @@
 .fondo-contacto   {background-image:url(../../fotos/fondo-contacto.jpg); height:90vh; background-position: center; background-size: cover; }
 textarea {min-height: 100px  ; max-height: 250px;}
-.fondomodal {background-image: url(../../fotos/gtr-r34.gif) ; background-repeat: no-repeat  ; background-size: cover; }
+.fondomodal {background-image: url(../fotos/gtr-r34.gif) ; background-repeat: no-repeat  ; background-size: cover; }
