--- a/scss/pages/_R32.scss
+++ b/scss/pages/_R32.scss
@@ -1,6 +1,6 @@
  /* Pagina R-32  */
   
- .portada--r32  {background-image:url(../fotos/fondor32.jpg); height:150vh; background-position: center; background-size: cover; }
+ .portada--r32  {background-image:url(/fotos/fondor32.jpg); height:150vh; background-position: center; background-size: cover; }
  .texto--r32  {box-sizing: content-box; width: 100%; background-color: aliceblue; padding: 15px; border: 3px solid black; height: 50vh; }
  .portada--r32 img {border: 3px solid black; height: 40vh;}
  .video--r32 {position:absolute; border: 3px solid black;height: 40vh; size-adjust: 20% ;box-sizing: content-box; }
