--- a/scss/pages/_R33.scss
+++ b/scss/pages/_R33.scss
@@ -1,4 +1,4 @@
  /* Pagina R-33  */
- .portada--r33  {background-image:url(../fotos/fondor33.jpg); height: 150vh; background-position: center; background-size: cover; }
+ .portada--r33  {background-image:url(/fotos/fondor33.jpg); height: 150vh; background-position: center; background-size: cover; }
  .portada--r33 p {box-sizing: content-box; width: 100%; background-color: aliceblue; padding: 15px; border: 3px solid black;height: 50vh; }
  .portada--r33 img {position:absolute; right: 50px; border: 3px solid black; height: 40vh; }
