--- a/scss/pages/_R36.scss
+++ b/scss/pages/_R36.scss
@@ -1,5 +1,5 @@
  /* Pagina R-36  */
 
- .portada--r36  {background-image:url(../fotos/fondor36.jpg); height:150vh; background-position: center; background-size: cover; }
+ .portada--r36  {background-image:url(/fotos/fondor36.jpg); height:150vh; background-position: center; background-size: cover; }
  .portada--r36 article {box-sizing: content-box; width: 50%; background-color: aliceblue; padding: 15px ;border: 3px solid black; }
  .portada--r36 img {position: absolute;right: 50px; border: 3px solid black; height:40vh}
