--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
 
 /* Pagina R-32  */
 .portada--r32 {
-  background-image: url(/fotos/fondor32.jpg);
+  background-image: url(../fotos/fondor32.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -64,7 +64,7 @@
 
 /* Pagina R-33  */
 .portada--r33 {
-  background-image: url(/fotos/fondor33.jpg);
+  background-image: url(../fotos/fondor33.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -88,7 +88,7 @@
 
 /* Pagina R-34  */
 .portada--r34 {
-  background-image: url(/fotos/fondor34.jpg);
+  background-image: url(../fotos/fondor34.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -113,7 +113,7 @@
 
 /* Pagina R-35  */
 .portada--r35 {
-  background-image: url(/fotos/fondor35.jpg);
+  background-image: url(../fotos/fondor35.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -137,7 +137,7 @@
 
 /* Pagina R-36  */
 .portada--r36 {
-  background-image: url(/fotos/fondor36.jpg);
+  background-image: url(../fotos/fondor36.jpg);
   height: 150vh;
   background-position: center;
   background-size: cover;
@@ -188,7 +188,7 @@ ul {
 
 /* Pagina de contacto */
 .fondo-contacto {
-  background-image: url(../../fotos/fondo-contacto.jpg);
+  background-image: url(../fotos/fondocontacto.jpg);
   height: 90vh;
   background-position: center;
   background-size: cover;
@@ -282,7 +282,7 @@ h2 {
     height: auto;
   }
   .fondomodal {
-    background-image: url(/fotos/nissan-r34.gif);
+    background-image: url(../fotos/nissanr34.gif);
   }
 }
 @media screen and (max-width: 500px) {
