--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,7 +43,7 @@
   .portada--r35 img {left: 50px;position: static; height: 25vh;}
   .portada--r36 img {left: 50px;position: static; height: 17vh;}
   .fondo-contacto form {height: auto;}
-  .fondomodal {background-image: url(/fotos/nissan-r34.gif);}
+  .fondomodal {background-image: url(../fotos/nissanr34.gif);}
   }
 
   @media screen and (max-width:500px) {
