--- a/scss/pages/_R35.scss
+++ b/scss/pages/_R35.scss
@@ -1,5 +1,5 @@
  /* Pagina R-35  */
 
- .portada--r35  {background-image:url(/fotos/fondor35.jpg); height:150vh; background-position: center; background-size: cover; }
+ .portada--r35  {background-image:url(../fotos/fondor35.jpg); height:150vh; background-position: center; background-size: cover; }
  .portada--r35 article  {box-sizing: content-box; width: 100%; height:100% ; background-color: aliceblue; padding: 15px ;border: 3px solid black; }
  .portada--r35 img {position: absolute;right: 50px; border: 3px solid black; height:40vh}
