--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,5 +1,5 @@
 /* Pagina de contacto */
 
-.fondo-contacto   {background-image:url(../../fotos/fondo-contacto.jpg); height:90vh; background-position: center; background-size: cover; }
+.fondo-contacto   {background-image:url(../fotos/fondocontacto.jpg); height:90vh; background-position: center; background-size: cover; }
 textarea {min-height: 100px  ; max-height: 250px;}
 .fondomodal {background-image: url(../fotos/gtr-r34.gif) ; background-repeat: no-repeat  ; background-size: cover; }
