--- a/scss/pages/_R32.scss
+++ b/scss/pages/_R32.scss
@@ -4,3 +4,4 @@
  .texto--r32  {box-sizing: content-box; width: 100%; background-color: aliceblue; padding: 15px; border: 3px solid black; height: 50vh; }
  .portada--r32 img {border: 3px solid black; height: 40vh;}
  .video--r32 {position:absolute; border: 3px solid black;height: 40vh; size-adjust: 20% ;box-sizing: content-box; }
+ .portada--r32 section {margin-bottom: auto;justify-content: space-around;}
