Correccion tamaño de texto

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,7 +42,7 @@
   .portada--r34 img {left: 50px;position: static; height: 25vh;}
   .portada--r34 p {height: 40vh;width: 90%;font-size: 0.85rem;}
   .portada--r35 img {left: 50px;position: static; height: 25vh;}
-  .portada--r35 p  {height: 50vh;width: 93%;justify-content: baseline;}
+  .portada--r35 p  {height: 50vh;width: 93%;justify-content: baseline;font-size: 0.9rem;}
   .fondo-contacto form {height: auto;}
   .fondomodal {background-image: url(../fotos/nissanr34.gif);}
   }
