--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ h2 {
     height: 50vh;
     width: 93%;
     justify-content: baseline;
+    font-size: 0.9rem;
   }
   .fondo-contacto form {
     height: auto;
